src/sass/main.sass
body
  background-color: #424342
  text-align: center
  width: 100%
  padding: 0
  margin: 0
  font-family: 'Avenir', Helvetica, Arial, sans-serif
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale

main
  width: 80%
  margin: 0 auto

section 
  background-color: #ddd
  padding: 20px
  width: 100%

h1, p, a
  text-align: center
  color: whitesmoke
  font-size: 30px

img
  width: 50%
  max-width: 500px

p
  font-size: 20px
  line-height: 24px
  color: white
  text-decoration: none


form
  position: relative
  background: white
  margin: 20px auto
  width: 100%
  padding: 20px
  border-radius: 10px
  box-shadow: 2px 2px 2px black

label
  margin: 20px auto
  max-width: 60%


input
  display: block
  margin: 20px auto
  border: 0
  background-color: lightgray

h1
  font-weight: bold

section
  border-radius: 2px
  h2
    margin-top: 0
    margin-bottom: 20px
  p
    color: #333
    width: 60%
    margin: 0 auto

input[type=email]
  padding: 10px 20px
  text-align: center

input[type=submit]
  background-color: #F38770
  padding: 10px 20px
  border-radius: 2px
  box-shadow: 1px 1px 2px .8px black
  font-weight: bold
  font-size: 20px
  color: #70dbf3

#results
  color: tomato
  margin: 0 auto

